added show more style

--- a/Ex6.RandomUser/src/App.css
+++ b/Ex6.RandomUser/src/App.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   max-width: 100%;
   margin: 20px;
   gap: 50px;
