--- a/Ex6.RandomUser/src/components/User/index.css
+++ b/Ex6.RandomUser/src/components/User/index.css
@@ -11,18 +11,32 @@
 .cardContainer {
   position: relative;
   min-width: 300px;
+  height: 300px;
 }
 
 .showCard {
+  backdrop-filter: blur(50px);
   position: absolute;
+  transition: transform 0.8s ease-in-out;
   width: 100%;
   top: 0;
   left: 0;
   z-index: 100;
-  background-color: grey;
+}
+
+.flipCard {
+  transform: rotateY(-180deg);
+  transition: transform 2s ease-in-out;
+}
+.flipEndCard {
+  transform: rotateY(-180deg) !important;
+  transition: 2s !important;
+  font-size: 12px;
 }
 
 .cardImage {
+  transform: rotateY(0);
+  transition: 2s;
   width: 50%;
   border-radius: 10px;
 }
