--- a/Ex6.RandomUser/src/components/User/index.css
+++ b/Ex6.RandomUser/src/components/User/index.css
@@ -27,11 +27,15 @@
 .flipCard {
   transform: rotateY(-180deg);
   transition: transform 2s ease-in-out;
+  font-size: 14px;
+  height: 300px;
 }
-.flipEndCard {
-  transform: rotateY(-180deg) !important;
-  transition: 2s !important;
-  font-size: 12px;
+.flippedBtn {
+  transform: rotateY(-180deg);
+  display: flex;
+  justify-content: center;
+  width: 20px;
+  gap: 15px;
 }
 
 .cardImage {
