--- a/Ex6.RandomUser/src/App.css
+++ b/Ex6.RandomUser/src/App.css
@@ -1,9 +1,16 @@
 .container {
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  flex-direction: column;
   max-width: 100%;
   margin: 20px;
   gap: 50px;
   flex-wrap: wrap;
+}
+.userContainer{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
+  margin-bottom: 150px;
 }
