--- a/Ex6.RandomUser/src/components/Login/index.css
+++ b/Ex6.RandomUser/src/components/Login/index.css
@@ -1,4 +1,4 @@
-.loginContainer{
+.loginContainer {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -9,10 +9,15 @@
   margin: 0 auto;
   gap: 30px;
   border-radius: 30px;
-position: relative;
+  position: relative;
 }
 
-.loginPage{
+.loginInput{
+  border: none;
+  /* outline: none; */
+}
+
+.loginPage {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -20,7 +25,7 @@ position: relative;
   gap: 60px;
 }
 
-.confirmPage{
+.confirmPage {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -28,11 +33,20 @@ position: relative;
   gap: 30px;
 }
 
-
-
 button {
   padding: 10px 30px;
   height: 50px;
   border-radius: 5px;
-  font-weight: 600;
+  font-weight: 700;
+  font-size: 15px;
+}
+
+.errorborder {
+  border: 4px solid red;
+
+}
+
+.disabledButton {
+  pointer-events: none;
+  opacity: 0.5;
 }
