--- a/Ex6.RandomUser/src/components/User/index.css
+++ b/Ex6.RandomUser/src/components/User/index.css
@@ -6,6 +6,7 @@
   border: 5px solid darkolivegreen;
   border-radius: 10px;
   padding: 30px;
+  /* height: 400px; */
 }
 
 .cardContainer {
@@ -42,9 +43,11 @@
 
 .flippedBtn{
   padding: 4px;
+  height: 30px;
   color: white;
   cursor: pointer;
   width: 100px;
+  font-size: 12px;
   border: none;
   background-color: darkslategray;
   border-radius: 5px;
