--- a/Ex6.RandomUser/src/App.css
+++ b/Ex6.RandomUser/src/App.css
@@ -15,8 +15,12 @@
   margin-bottom: 150px;
 }
 
-.headerContainer{
+.headerContainer {
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+
+.displaeNone {
+  display: none;
 }
